[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/enemy/godot/godot.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/GodotFSM.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/Godot.gd" type="Script" id=3]
[ext_resource path="res://scenes/HPBar.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.219, 127.497 )

[node name="Godot" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 16391
script = ExtResource( 3 )

[node name="GodotFSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="groundCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16

[node name="hitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.250351 )
shape = SubResource( 1 )

[node name="floorCollision1" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 125 )

[node name="floorCollision2" type="RayCast2D" parent="."]
cast_to = Vector2( -120, 125 )

[node name="floorCollision3" type="RayCast2D" parent="."]
cast_to = Vector2( 120, 125 )

[node name="currentState" type="Label" parent="."]
margin_left = -30.3055
margin_top = -46.0
margin_right = 30.6945
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" parent="." instance=ExtResource( 4 )]
margin_left = -119.0
margin_top = -177.0
margin_right = 121.0
margin_bottom = -134.0
